@@ -64,6 +64,7 @@ void NetworkFlush();
 [[nodiscard]] money64 NetworkGetPlayerMoneySpent(uint32_t index);
 [[nodiscard]] std::string NetworkGetPlayerIPAddress(uint32_t id);
 [[nodiscard]] std::string NetworkGetPlayerPublicKeyHash(uint32_t id);
+void NetworkIncrementPlayerNumCommands(uint32_t playerIndex);
 void NetworkAddPlayerMoneySpent(uint32_t index, money64 cost);
 [[nodiscard]] int32_t NetworkGetPlayerLastAction(uint32_t index, int32_t time);
 void NetworkSetPlayerLastAction(uint32_t index, GameCommand command);
